--- a/writing.Rmd
+++ b/writing.Rmd
@@ -8,9 +8,24 @@ output:
       smooth_scroll: yes
 ---
 
-## Plain-text writing in general
+## Writing in general
 
 - Kieran Healy, [*The Plain Person's Guide to Plain Text Social Science*](https://plain-text.co/)
+
+
+## Example papers
+
+- [Paper written with regular Markdown](https://www.andrewheiss.com/research/heiss-2019-taking-control/) (with figures generated in R)
+    - [Markdown file](https://raw.githubusercontent.com/andrewheiss/taking-control-of-regulations/master/manuscript/taking-control-of-regulations.md)
+    - [PDF output](https://www.andrewheiss.com/files/research/2019-heiss-taking-control-of-regulations.pdf)
+    - [R analysis notebook](https://stats.andrewheiss.com/taking-control-of-regulations/analysis.html)
+    - [GitHub repository](https://github.com/andrewheiss/taking-control-of-regulations)
+
+- [Paper written with R Markdown](https://www.andrewheiss.com/research/chaudhry-heiss-ngos-philanthropy/)
+    - [R Markdown file](https://raw.githubusercontent.com/andrewheiss/ngo-crackdowns-philanthropy/master/manuscript/manuscript.Rmd)
+    - [PDF output](https://www.andrewheiss.com/files/research/chaudhry-heiss-ngos-philanthropy.pdf)
+    - [R analysis notebook](https://stats.andrewheiss.com/ngo-crackdowns-philanthropy/)
+    - [GitHub repository](https://github.com/andrewheiss/ngo-crackdowns-philanthropy)
 
 
 ## Text editors
